--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "goit-react-hw-07-phonebook",
+  "name": "goit-react-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://overmind777.github.io/goit-react-hw-07-phonebook/",
+  "homepage": "https://overmind777.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@chakra-ui/input": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.0",
+    "framer-motion": "^10.16.4",
     "nanoid": "^5.0.2",
     "notiflix": "^3.2.6",
     "react": "^18.1.0",
